# Filane

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
AppDir/: AppRun  dual-pane-fm.desktop
AppDir/usr/share/applications/: dual-pane-fm.desktop
desktop/: dual-pane-fm.desktop
releases/: README.md
src/: app.rs  app_gui.rs  bookmarks.rs  filesystem.rs  lib.rs  pane.rs  pdf_renderer.rs  trash.rs  ui.rs
