[package]
name = "dual-pane-fm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dual-pane-fm-tui"
path = "src/bin/tui.rs"

[[bin]]
name = "dual-pane-fm-gui"
path = "src/bin/gui.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
dirs = "5.0"
chrono = "0.4"
image = "0.25"
zip = "0.6"
git2 = "0.18"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pdfium-render = "0.8"
lopdf = "0.34"
open = "5.0"
